# cerberus

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  DEV_RUNBOOK.md  GIT_WORKFLOW.md  PROJECT.md  README.md  ROADMAP.md  eslint.config.mjs  package-lock.json  package.json  rustfmt.toml  tsconfig.base.json  vitest.config.ts
.github/workflows/: ci.yml
apps/desktop/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: error.rs  lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: mod.rs
apps/desktop/src-tauri/src/crypto/: aead.rs  kdf.rs  mod.rs  secret.rs
apps/desktop/src-tauri/src/vault/: account.rs  manager.rs  mod.rs  store.rs
apps/desktop/src/components/: icons.tsx  index.ts
apps/desktop/src/components/ui/: banner.tsx  button.tsx  card.tsx  input.test.tsx  input.tsx  label.tsx  wave.tsx
apps/desktop/src/features/: index.ts
apps/desktop/src/features/auth/: AuthFrame.tsx  AuthScreen.test.tsx  AuthScreen.tsx  Onboarding.test.tsx  Onboarding.tsx  RhythmEnrollment.test.tsx  RhythmEnrollment.tsx  StepHeader.tsx  TotpOnboarding.test.tsx  TotpOnboarding.tsx
apps/desktop/src/features/inspector/: RiskDashboard.test.tsx  RiskDashboard.tsx  charts.tsx  icons.tsx  illustrative.ts  live.test.ts  live.ts  model.ts  theme.ts
apps/desktop/src/features/vault/: OtpField.tsx  RiskInspector.test.tsx  RiskInspector.tsx  TotpEnrollment.test.tsx  TotpEnrollment.tsx  VaultView.test.tsx  VaultView.tsx
apps/desktop/src/lib/: api.test.ts  api.ts  auth-errors.test.ts  auth-errors.ts  auth.test.ts  auth.ts  cn.ts  device.test.ts  device.ts  keystroke-capture.ts  keystroke.test.ts  keystroke.ts  mouse-capture.test.ts  mouse-capture.ts  otp.test.ts  otp.ts  password-strength.test.ts  password-strength.ts  secure-core.test.ts  secure-core.ts  sync.test.ts  sync.ts  tauri.test.ts  tauri.ts  ws.test.ts  ws.ts
apps/desktop/src/styles/: globals.css
apps/server/: package.json
apps/server/src/: app.ts  config.test.ts  config.ts  index.ts  sync.e2e.test.ts
apps/server/src/demo/: cli.ts  core.ts  env.ts  geovelocity.ts  impostor.ts  reset.ts  samples.ts  seed.ts
apps/server/src/eval/: integrated-study.test.ts  integrated-study.ts  run-integrated-analysis.ts  run-keystroke-eval.ts  run-mouse-eval.ts  run-threshold-tuning.ts
apps/server/src/middleware/: async-handler.ts  authenticate.ts  cors.ts  error-handler.ts  not-found.ts  rate-limit.ts  request-id.ts  validate.ts
apps/server/src/repositories/: behavioral-baselines.ts  devices.ts  enrollment-samples.ts  index.ts  login-failures.ts  pool.ts  repositories.test.ts  risk-events.ts  sessions.ts  step-up-challenges.ts  totp-secrets.ts  users.ts  vault-items.ts  vault-keys.ts
apps/server/src/risk/: balabit-loader.test.ts  balabit-loader.ts  baseline-model.test.ts  baseline-model.ts  chi-squared.test.ts  chi-squared.ts  cmu-loader.fixture.csv  cmu-loader.test.ts  cmu-loader.ts  combiner.test.ts  combiner.ts  config.ts  continuous-auth.test.ts  continuous-auth.ts  detectors.test.ts  eer.test.ts  eer.ts  evaluation.test.ts  evaluation.ts  index.ts  mahalanobis.test.ts  mahalanobis.ts  policy.test.ts  policy.ts  random.ts  scorer.test.ts  scorer.ts  threshold-tuning.test.ts  threshold-tuning.ts
apps/server/src/risk/detectors/: index.ts  isolation-forest.ts  ocsvm.ts  scaler.ts
apps/server/src/risk/geo/: centroids.ts  geo.test.ts  haversine.ts
apps/server/src/routes/: auth.test.ts  auth.ts  contextual.test.ts  cors.test.ts  demo-readiness.test.ts  deny-explanation.test.ts  enforcement.test.ts  enrollment.test.ts  enrollment.ts  geovelocity.test.ts  health.ts  index.ts  risk.ts  scoring.test.ts  vault.test.ts  vault.ts
apps/server/src/services/: auth-crypto.ts  auth.ts  baseline-crypto.test.ts  baseline-crypto.ts  behavioral.ts  contextual-risk.ts  continuous-auth.test.ts  continuous-auth.ts  enrollment.ts  geoip.test.ts  geoip.ts  health.ts  rate-limiter.ts  risk-decision.ts  risk-explanation.test.ts  risk-explanation.ts  risk-inspector.ts  scoring.ts  secretbox.ts  totp-service.ts  totp.test.ts  totp.ts  vault.ts
apps/server/src/test-support/: auth.ts  config.ts  fixtures.ts  postgres.ts
apps/server/src/ws/: continuous-auth.test.ts  index.ts
docs/: CERBERUS_HANDOFF.md  DEMO.md  geoip.md  schema-reference.md  threat-model.md
docs/adr/: 0001-crypto-model.md  0002-behavioral-baselines-and-scoring.md  0003-hermetic-phase0-ci-deferred-tauri.md  0004-repo-tooling-baseline.md  0005-crypto-wire-format-and-domain-separation.md  0006-desktop-app-architecture.md  0007-zero-knowledge-login-handshake.md  0008-encrypted-blob-sync.md  0009-behavioral-feature-schema-and-enrollment.md  0010-mahalanobis-scoring-and-detector-comparison.md  0011-contextual-risk-signals.md  0012-adaptive-policy-and-step-up.md  0013-continuous-auth-mouse-dynamics.md  0014-evaluation-methodology-and-operating-point.md  0015-ui-design-system.md
docs/appendices/: appendix-B.md  appendix-C.md  appendix-D.md
docs/design/inspector/: Risk Inspector.dc.html
docs/design/m12/: direction-a-vault.html  direction-b-clean-trust.html  direction-c-cyber-sentinel.html  index.html
docs/encyclopedia/: 00-RECON-NOTES.md  00-index.md  01-overview.md  02-architecture.md  03-repository-map.md  04-cryptographic-core.md  05-vault-and-sync.md  06-behavioral-engine.md  07-decision-and-policy.md  08-continuous-auth.md  09-server-and-api.md  10-database.md  11-frontend.md  12-build-run-test.md  13-glossary.md  14-algorithms-deep-dive.md
docs/evaluation/: README.md  keystroke-detector-comparison.json  keystroke-detector-comparison.md  mouse-detector-comparison.json  mouse-detector-comparison.md  threshold-tuning.json  threshold-tuning.md
migrations/: 0001_initial_schema.sql  0002_enrollment_feature_schema_version.sql  0003_contextual_signals.sql  0004_step_up_auth.sql  0005_mouse_modality.sql  0006_step_up_confirmed_session.sql  migrate.ts  package.json  tsconfig.json
(+7 files in other folders)
