# Cargo workspace root.
# The only Rust crate this milestone is the desktop security core (`src-tauri`);
# additional crates would be added as members here.
[workspace]
resolver = "2"
members = ["apps/desktop/src-tauri"]

# Shared lint policy for every workspace crate (PROJECT.md §4.1).
# `cargo clippy -- -D warnings` in CI promotes all of these to hard errors.
[workspace.lints.rust]
unsafe_code = "deny"          # No `unsafe` without a SAFETY comment + ADR (none yet).

[workspace.lints.clippy]
# PROJECT.md §4.1 — no unwrap()/expect()/panic!() in non-test code.
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

# Dev/test builds optimize DEPENDENCIES (notably argon2 + its BLAKE2b backend) so the
# CPU-bound Argon2id derivation runs at near-release speed under `tauri dev` (~0.5 s
# instead of several seconds in an unoptimized debug build). Our own crates stay at
# opt-level 0 for fast incremental rebuilds and debuggability. This changes only HOW
# the same code is compiled — the Argon2id parameters (ADR-0001: 224 MiB / t=3 / p=1)
# are UNCHANGED, and the release profile is unaffected. (First build is a little
# slower as deps compile optimized; cached thereafter.)
[profile.dev.package."*"]
opt-level = 3
